apps/base/mitmproxy/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mitmproxy-proxy
  namespace: mitmproxy
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http-proxy
      port: 80
      protocol: TCP
      targetPort: http-proxy
  selector:
    app: mitmproxy
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: mitmproxy-web
  namespace: mitmproxy
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http-web
      port: 80
      protocol: TCP
      targetPort: http-web
  selector:
    app: mitmproxy
  type: ClusterIP
