apps/base/mitmproxy/resources/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: mitmproxy
    app.kubernetes.io/name: mitmweb
  name: mitmweb
  namespace: mitmproxy
spec:
  hostnames:
    - mitmproxy.example.com
  parentRefs:
    - name: gateway
  rules:
    - backendRefs:
        - name: mitmproxy
          port: 8081
      filters:
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: ip-allowlist
          type: ExtensionRef
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: security-headers
          type: ExtensionRef
      matches:
        - path:
            type: PathPrefix
            value: /
