apps/base/mitmproxy/resources/ingressroute.yaml
# ---
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   labels:
#     app.kubernetes.io/instance: mitmproxy
#     app.kubernetes.io/name: mitmproxy
#   name: mitmproxy
#   namespace: mitmproxy
# spec:
#   entryPoints:
#     - websecure
#   routes:
#     - kind: Rule
#       match: Host(`mitmproxy.example.com`)
#       middlewares:
#         - name: ip-allowlist
#         - name: security-headers
#       services:
#         - name: mitmproxy
#           port: 8080
#   tls:
#     secretName: mitmproxy-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: mitmproxy
    app.kubernetes.io/name: mitmweb
  name: mitmweb
  namespace: mitmproxy
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`mitmproxy.example.com`)
      middlewares:
        - name: ip-allowlist
        - name: security-headers
      services:
        - name: mitmproxy
          port: 8081
  tls:
    secretName: mitmweb-tls
